--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.4
-  animated_theme_switcher: 
+  curved_navigation_bar: ^1.0.3
+  material_design_icons_flutter: ^5.0.6996
 
 dev_dependencies:
   flutter_test:
