--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^1.1.4
   curved_navigation_bar: ^1.0.3
   material_design_icons_flutter: ^5.0.6996
+  liquid_pull_to_refresh: ^3.0.1
 
 dev_dependencies:
   flutter_test:
