--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   material_design_icons_flutter: ^5.0.6996
   liquid_pull_to_refresh: ^3.0.1
+  chart_sparkline: ^1.0.11
 
 dev_dependencies:
   flutter_test:
