--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.4
-  curved_navigation_bar: ^1.0.3
+  google_nav_bar: ^5.0.6
   material_design_icons_flutter: ^5.0.6996
   liquid_pull_to_refresh: ^3.0.1
   chart_sparkline: ^1.0.11
