--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   material_design_icons_flutter: ^5.0.6996
   liquid_pull_to_refresh: ^3.0.1
   chart_sparkline: ^1.0.11
-
+  font_awesome_flutter: ^10.1.0
+  animated_theme_switcher: "^2.0.5"
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +68,8 @@ flutter:
   assets:
     - assets/agami_logo.svg
     - assets/blank.png
+    - assets/bangla.png
+    - assets/english.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -84,9 +88,15 @@ flutter:
      - family: Roboto Condensed
        fonts:
          - asset: assets/RobotoCondensed-Regular.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+           weight: 400
+     - family: Roboto Condensed
+       fonts:
+         - asset: assets/RobotoCondensed-Light.ttf
+           weight: 300
+     - family: Ador Noirrit
+       fonts:
+
+         - asset: assets/AdorNoirritRegular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
