--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   chart_sparkline: ^1.0.11
   font_awesome_flutter: ^10.1.0
   animated_theme_switcher: "^2.0.5"
+  hive: ^2.2.3
   
 dev_dependencies:
   flutter_test:
