--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   animated_theme_switcher: "^2.0.5"
   hive: ^2.2.3
+  mask_text_input_formatter: ^2.4.0
   
 dev_dependencies:
   flutter_test:
@@ -69,8 +70,7 @@ flutter:
   assets:
     - assets/agami_logo.svg
     - assets/blank.png
-    - assets/bangla.png
-    - assets/english.png
+    - assets/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
