--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,10 @@ flutter:
     - assets/agami_logo.svg
     - assets/blank.png
     - assets/logo.png
-    - assets/1.jpg
+    - assets/illustration-1.png
+    - assets/illustration-2.png
+    - assets/illustration-3.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
