--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   animated_theme_switcher: "^2.0.5"
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   mask_text_input_formatter: ^2.4.0
   
 dev_dependencies:
