--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,12 +70,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/agami_logo.svg
     - assets/blank.png
     - assets/logo.png
     - assets/illustration-1.png
     - assets/illustration-2.png
     - assets/illustration-3.png
+    - assets/splash-back.jpg
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
