--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/illustration-2.png
     - assets/illustration-3.png
     - assets/splash-back.jpg
+    - assets/pin-back.jpg
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
