--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   animated_theme_switcher: "^2.0.5"
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_listener: ^1.2.1
   mask_text_input_formatter: ^2.4.0
   firebase_core: ^1.22.0
   firebase_auth: ^3.8.0
