--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^3.8.0
   cloud_firestore: ^3.4.7
   connectivity_plus: ^2.3.6+1
+  qr_code_scanner: ^1.0.1
   
 dev_dependencies:
   flutter_test:
