--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,7 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_auth: ^3.8.0
   cloud_firestore: ^3.4.7
-  connectivity_plus: ^2.3.6+1
-  qr_code_scanner: ^1.0.1
+  file_picker: ^5.0.1
   
 dev_dependencies:
   flutter_test:
