--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = agami
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.agami
+PRODUCT_BUNDLE_IDENTIFIER = com.agamilabs.amardokan
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
