--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,11 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_auth: ^3.8.0
   cloud_firestore: ^3.4.7
+  firebase_storage: ^10.3.8
+  image_cropper: ^3.0.0
+  image_picker: ^0.8.5+3
   file_picker: ^5.0.1
+  
   
 dev_dependencies:
   flutter_test:
