--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   chart_sparkline: ^1.0.11
   font_awesome_flutter: ^10.1.0
-  animated_theme_switcher: "^2.0.5"
+  flutter_barcode_scanner: ^2.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_listener: ^1.2.1
@@ -58,6 +58,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_background: "assets/adaptive_back.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -86,6 +93,7 @@ flutter:
     - assets/illustration-3.png
     - assets/splash-back.jpg
     - assets/pin-back.jpg
+    - assets/default-photo.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
