--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   chart_sparkline: ^1.0.11
   font_awesome_flutter: ^10.1.0
   flutter_barcode_scanner: ^2.0.0
+  qr_flutter: ^4.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_listener: ^1.2.1
@@ -54,6 +55,7 @@ dependencies:
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
   url_launcher: ^6.1.5
+  shimmer: ^2.0.0
   
 dev_dependencies:
   flutter_test:
