--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ flutter:
     - assets/illustration-2.png
     - assets/illustration-3.png
     - assets/splash-back.jpg
-    - assets/pin-back.jpg
+    - assets/pin-back.png
     - assets/default-photo.png
 
   #   - images/a_dot_burr.jpeg
