--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   file_picker: ^5.0.1
   url_launcher: ^6.1.5
   shimmer: ^2.0.0
-  
+  share_plus: ^4.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,7 +67,6 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/icon.png"
-  adaptive_icon_background: "assets/adaptive_back.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
