--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,11 +17,11 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '2.10.5'  # Set to the version you need, e.g., 3.0.0
+        flutter-version: '2.10.5'  # or any version >= 2.10.0 that matches your project's requirements
         channel: stable
 
     - name: Install dependencies
-      run: flutter pub get  # Remove the --no-cache option
+      run: flutter pub get
 
     - name: Run tests
       run: flutter test
