--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,35 +1,38 @@
-name: Flutter CI
+name: Dart
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: 
+      - main
 
 jobs:
-  build:
+  build-and-test: 
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
+    - uses: actions/checkout@v2
+    # The flutter action needs java so include it
+    - uses: actions/setup-java@v1
       with:
-        flutter-version: 'stable'
-
-    - name: Install dependencies
-      run: flutter pub get
-
-    - name: Run tests
-      run: flutter test
-
-    - name: Build APK
-      run: flutter build apk --release
+        java-version: '12.x'
+    # Include the flutter action
+    - uses: subosito/flutter-action@v2
+      with:
+        channel: 'stable'  
+    # Get flutter packages
+    - run: flutter pub get
+    # Change app icon
+    - run: flutter pub run flutter_launcher_icons
+    # Build :D 
+    - run: flutter build apk --split-per-abi
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
-        name: app-release.apk
-        path: build/app/outputs/flutter-apk/app-release.apk
+        name: app-release
+        path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+
+    - name: Download APK
+      uses: actions/download-artifact@v2
+      with:
+        name: app-release
+        path: build
