--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -21,7 +21,7 @@ jobs:
     # Get flutter packages
     - run: flutter pub get
     # Change app icon
-    - run: flutter pub run flutter_launcher_icons
+    - run: flutter pub run flutter_launcher_icons:main
     # Build :D 
     - run: flutter build apk --split-per-abi
 
