--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,12 +61,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
-  android: true
+flutter_luncher_icons:
+  android: "luncher_icon"
   ios: true
   image_path: "assets/icon.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
