--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.5
-  flutter_svg: ^1.1.4
+  http: ^1.2.2
+  flutter_svg: ^2.0.10+1
   google_nav_bar: ^5.0.6
-  material_design_icons_flutter: ^5.0.6996
+  material_design_icons_flutter: ^7.0.7296
   liquid_pull_to_refresh: ^3.0.1
   chart_sparkline: ^1.0.11
   font_awesome_flutter: ^10.1.0
@@ -47,16 +47,16 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_listener: ^1.2.1
   mask_text_input_formatter: ^2.4.0
-  firebase_core: ^1.22.0
-  firebase_auth: ^3.8.0
-  cloud_firestore: ^3.4.7
-  firebase_storage: ^10.3.8
-  image_cropper: ^3.0.0
-  image_picker: ^0.8.5+3
-  file_picker: ^5.0.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  image_cropper: ^8.0.2
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
   url_launcher: ^6.1.5
-  shimmer: ^2.0.0
-  share_plus: ^4.4.0
+  shimmer: ^3.0.0
+  share_plus: ^10.0.2
 
 dev_dependencies:
   flutter_test:
